# cicada-vector

./: .gitignore  CLAUDE.md  README.md  cigrep.py  cli.py  pyproject.toml  start_server.sh  test_e2e_ollama.py  test_rag.py  test_vector.py
.github/workflows/: publish.yml  test.yml
docs/: OLLAMA_EMBEDDING_LIMITS.md
examples/: embed_cicada.py  embed_csv.py  hybrid_csv_test.py  query_thenvoi.py  search_cicada.py  search_csv.py
src/cicada_vector/: __init__.py  cigrep.py  cilog.py  cli.py  db.py  embeddings.py  git_indexer.py  hybrid.py  indexer.py  keyword_db.py  mcp.py  rag.py
tests/: test_core.py  test_e2e_ollama.py  test_hybrid.py  test_rag.py
