[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cicada-vector"
version = "0.1.1"
description = "A poor man's vector database for Python. Zero dependencies, JSONL storage."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cicada Team", email = "wende@hey.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
cicada-vec = "cicada_vector.cli:main"
cicada-vec-server = "cicada_vector.mcp:main"
cigrep = "cicada_vector.cigrep:main"

[project.optional-dependencies]
numpy = ["numpy"]
server = ["mcp>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cicada_vector"]
